git-annex (8.20200227) UNRELEASED; urgency=medium

  * Fix regression that prevented external special remotes from using
    GETCONFIG to query values like "name". (Introduced in version 7.20200202.7.)
  * Fix bug that caused unlocked annexed dotfiles to be added to git by the
    smudge filter when annex.dotfiles was not set.
  * Improve behavior when a directory git-annex is writing to gets
    unmounted. Previously it could in some cases re-create the mount point
    and directory tree, and even write object contents to the wrong disk.
  * Bugfix: Don't ignore --debug when it is followed by -c.
  * whereis: If a remote fails to report on urls where a key
    is located, display a warning, rather than giving up and not displaying
    any information.
  * When external special remotes fail but neglect to provide an error
    message, say what request failed, which is better than displaying an
    empty error message to the user.
  * Fix build with ghc 8.8 (MonadFail)
    Thanks, Peter Simons
  * stack.yaml: Updated to lts-14.27.
  * git-annex config: Only allow configs be set that are ones git-annex actually
    supports reading from repo-global config, to avoid confusion.
  * Linux standalone: Use md5sum to shorten paths in .cache/git-annex/locales
  * Avoid converting .git file in a worktree or submodule to a symlink
    when the repository is not a git-annex repository.

 -- Joey Hess <id@joeyh.name>  Thu, 27 Feb 2020 00:44:11 -0400

git-annex (8.20200226) upstream; urgency=medium

  * New v8 repository version.
  * v7 upgrades automatically to v8. The upgrade deletes old sqlite
    databases, which may cause git-annex to need to do extra work to
    regenerate the databases or due to not having the information from the
    old databases available. Two notable cases are interrupted incremental
    fscks and interrupted exports, both of which will restart from the
    beginning.
  * Improved serialization of filenames and keys to the sqlite databases,