@@ -4,6 +4,11 @@ git-annex (8.20200227) UNRELEASED; urgency=medium
     GETCONFIG to query values like "name". (Introduced in version 7.20200202.7.)
   * Fix bug that caused unlocked annexed dotfiles to be added to git by the
     smudge filter when annex.dotfiles was not set.
+  * Upgrade other repos than the current one by running git-annex upgrade
+    inside them, which avoids problems with upgrade code making assumptions
+    that the cwd will be inside the repo being upgraded. In particular,
+    this fixes a problem where upgrading a v7 repo to v8 caused an ugly
+    git error message.
   * Improve behavior when a directory git-annex is writing to gets
     unmounted. Previously it could in some cases re-create the mount point
     and directory tree, and even write object contents to the wrong disk.
